Apply suggestions from code review
Co-authored-by: Lucas Welscher <ga53foy@mytum.de>